Modernize code to Java 17 idioms
Replace Collections.unmodifiable*() and Arrays.asList() with modern alternatives (List.of(), Map.of(), Set.of()), migrate .collect(toList()) to .toList(), and convert @ThisWouldBeOneLineIn annotations to proper private interface methods